--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,5 @@
-<p>This is the about view.</p>
+<div ng-include="'views/include/header.html'"></div>
+<div class="container">
+  <p>This is the about view.</p>
+</div>
+<div ng-include="'views/include/footer.html'"></div>
