--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,20 +1,21 @@
-<form class="form-horizontal" ng-submit="loginSubmit()">
-  <div class="form-group">
-    <label class="col-sm-3 control-label">username:</label>
-    <div class="col-sm-3">
-      <input type="text" class="form-control" placeholder="Please input your username"/>
+<div class="container">
+  <form class="form-horizontal" ng-submit="loginSubmit()">
+    <div class="form-group">
+      <label class="col-sm-3 control-label">username:</label>
+      <div class="col-sm-3">
+        <input type="text" class="form-control" placeholder="Please input your username"/>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label class="col-sm-3 control-label">password:</label>
-    <div class="col-sm-3">
-      <input type="password" class="form-control" placeholder="Please input your password"/>
+    <div class="form-group">
+      <label class="col-sm-3 control-label">password:</label>
+      <div class="col-sm-3">
+        <input type="password" class="form-control" placeholder="Please input your password"/>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-3">
-      <button type="submit" class="btn btn-success">Login in</button>
+    <div class="form-group">
+      <div class="col-sm-offset-3 col-sm-3">
+        <button type="submit" class="btn btn-success">Login in</button>
+      </div>
     </div>
-  </div>
-</form>
-
+  </form>
+</div>
